fixing bug with card layout that causes stuff to resize and stay too large

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -135,7 +135,7 @@ body.details {
   }
 
   .cards.wrapper {
-    display: grid;
+    display: flex;
     grid-column: content;
   }
 
